modified html for the last time because I wanted to fix the issue with the extra space for no reason, and an issue with the skills icons. Maybe I'll re-create this page from scratch when I get better at web-dev

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -54,8 +54,17 @@ body {
     display: flex;
     background-color:rgb(25, 73, 76);
     margin-left: -1rem;
-    margin-right: -1rem;
+    margin-right: -1rem;*/
 }
+@media (max-width: 800px) {
+    .navbar #navigation {
+        flex-direction: column;
+    }
+    .container {
+        justify-content:space-between;
+    }
+}
+
 
 /* ---| NAVIGATION BAR |--- */
 
@@ -169,20 +178,36 @@ h3 {
 
 /* ---| LANGUAGES I KNOW |--- */
 
+
 .section {
-    display: flex;
-    align-content: center;
-    background-color: #37444F;
+   display: flex;
     justify-content: center;
-}
+    } 
+   
+
 
 #skills {
     list-style-type: none;
     display: flex;
+    flex-direction: row;
+    background-color: #37444F;
+
+    
     
 }
 
+@media (max-width: 730px) {
+    #skills {
+        flex-direction: column;
+    }
+    #skills li {
+        margin-right: 1em;
+    }
+}
+
 #skills li {
+    display:flex;
+    flex-direction: column;
     padding-right: 1em;
     color: #eceff1;
 
@@ -194,7 +219,7 @@ h3 {
 
 #skills li ul li {
     display: flex;
-    justify-content: center;
+/*     justify-content: center; */
 }
 
 #skills li ul .icon i{
@@ -240,7 +265,8 @@ blockquote::before {
 /* ---| FOOTER CONTAINER |--- */
 .footer {
     background-image: url(../images/tree.jpeg);
-    background-size: cover;
+/*     background-size: cover; */
+    width: 100vw;
     background-position-y: -76rem;
     position: relative;
     background-repeat: no-repeat;
